fixing the colab link 3 attempt

--- a/Summer_School/1/Conversational_AI_workshop_Task_1a.ipynb
+++ b/Summer_School/1/Conversational_AI_workshop_Task_1a.ipynb
@@ -26,7 +26,7 @@
    },
    "source": [
     "<a href=\"https://colab.research.google.com/\n",
-    "github/aig-upf/conversational-ai-workshop/main/1/\n",
+    "github/aig-upf/conversational-ai-workshop/blob/main/1/\n",
     "Conversational_AI_workshop_Task_1a.ipynb\" target=\"_parent\">\n",
     "<img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
@@ -37,17 +37,15 @@
     "id": "uMu_tohRZR-o"
    },
    "source": [
-    "# Can your AI beat the Turing test?\n",
-    "s\n",
+    "# Lab3 Natural Language Processing\n",
     "## Task 1: Language models\n",
     "\n",
     "Welcome to the workshop! \n",
     "\n",
-    "In this first part you will train a character-based language model called minGPT from scratch! This will *not* give you a chat bot yet, but it gives you a model which is able to generate text, which lays the basis of open domain chat bots. Please have a bit of patience - we will get to this in task 2!\n",
+    "In this first part you will train a character-based language model called minGPT from scratch!\n",
     "\n",
     "\n",
     "### Important resources/links\n",
-    "* [The workshop GitHub repo](https://github.com/utanashati/conversational-ai-workshop)\n",
     "* [Official minGPT repo](https://github.com/karpathy/minGPT)"
    ]
   },
