--- a/Summer_School/1/Conversational_AI_workshop_Task_1a.ipynb
+++ b/Summer_School/1/Conversational_AI_workshop_Task_1a.ipynb
@@ -25,9 +25,7 @@
     "colab_type": "text"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/\n",
-    "github/aig-upf/conversational-ai-workshop/blob/main/1/\n",
-    "Conversational_AI_workshop_Task_1a.ipynb\" target=\"_parent\">\n",
+    "<a href=\"https://colab.research.google.com/github/aig-upf/conversational-ai-workshop/blob/main/1/Conversational_AI_workshop_Task_1a.ipynb\" target=\"_parent\">\n",
     "<img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
