--- a/Summer_School/1/Conversational_AI_workshop_Task_1a.ipynb
+++ b/Summer_School/1/Conversational_AI_workshop_Task_1a.ipynb
@@ -195,13 +195,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Your task here is to try to implement by your owkn a multiclass cross entropy that will be used to train your model.\n",
+    "# Your task here is to try to implement by your own a multiclass cross entropy that will be used to train your model.\n",
     "\n",
     "\n",
     "import torch.nn.functional as F\n",
     "\n",
     "def loss_fn(logits, targets):\n",
-    "\n",
+    "  \n",
+    "  ### SOLUTION:\n",
     "  # ### reshape logits and targets\n",
     "\n",
     "  # logits = logits.view(-1, logits.size(-1))\n",
