--- a/Summer_School/1/Conversational_AI_workshop_Task_1a.ipynb
+++ b/Summer_School/1/Conversational_AI_workshop_Task_1a.ipynb
@@ -140,7 +140,7 @@
     "        dix = [self.stoi[s] for s in chunk]\n",
     "        x = torch.tensor(dix[:-1], dtype=torch.long)\n",
     "        y = torch.tensor(dix[1:], dtype=torch.long)\n",
-    "        return x, y y\n"
+    "        return x, y\n"
    ],
    "execution_count": null,
    "outputs": []
@@ -201,7 +201,7 @@
     "import torch.nn.functional as F\n",
     "\n",
     "def loss_fn(logits, targets):\n",
-    "  \n",
+    "\n",
     "  ### SOLUTION:\n",
     "  # ### reshape logits and targets\n",
     "\n",
