added task 2 prompt

--- a/Summer_School/1/Conversational_AI_workshop_Task_1b.ipynb
+++ b/Summer_School/1/Conversational_AI_workshop_Task_1b.ipynb
@@ -1265,20 +1265,15 @@
     "id": "uMu_tohRZR-o"
    },
    "source": [
-    "# Can your AI beat the Turing test?\n",
-    "\n",
+    "# Lab3 Natural Language Processing\n",
     "## Task 1b: Understanding attention\n",
     "\n",
     "In the past notebook we have pretrained a character-based minGPT language model. Here we try to better understand why GPT-models are so effective at text generation and other NLP tasks.\n",
     "\n",
     "### Important resources/links\n",
-    "We will make use of two libraries in this section:\n",
-    "* The [transformers library by Huggingface](https://huggingface.co/transformers/) - A popular NLP libraries which provides implementations and model weights of many of the most common transformer language models such as BERT, GPT-2, etc.\n",
+    "We will make use of the Ecco library in this section:\n",
     "* [Ecco](https://github.com/jalammar/ecco) - A library which allows to visualize attention layers of models implemented in the transformers library\n",
-    "\n",
-    "Other:\n",
-    "* A full walk-through [blog post](https://jalammar.github.io/explaining-transformers/) of Ecco by Jay Alammar\n",
-    "* [The workshop GitHub repo](https://github.com/utanashati/conversational-ai-workshop)"
+    "* A full walk-through [blog post](https://jalammar.github.io/explaining-transformers/) of Ecco by Jay Alammar"
    ]
   },
   {
